<resources>
    <string name="app_name">Viajens Alura</string>
    <string name="especiais">Especiais</string>
    <string name="pais">Brasil</string>
    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar pagamento</string>
    <string name="imagem_do_pacote">imagem do pacote</string>
    <string name="mascara_nome_no_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja utilizar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_do_cartao">Numero do cartao</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="nome_no_cartao">Nome no nome</string>
    <string name="finaliza_compra">Finaliza Compra</string>
    <string name="parabens">Parabens</string>
    <string name="compra_realizada_com_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_o_resumo_da_compra">Confira o resumo da compra</string>
    <string name="imagem_de_parabenizacao">imagem_de_parabenizacao</string>
</resources>
